Move from collectors to built in toList method.
Existing code is fine, however it produces modifiable lists when you only use them in an unmodifiable context. This code is technically more correct, and has the added benefit of being slightly shorter and easier to read.